# ratatui-2048

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  deploy.yml
src/: board.rs  game.rs  main.rs  score.rs
