[package]
name = "game_2048"
version = "0.1.0"
description = "2048 game"
authors = ["Thomas Deconinck <thomas.deconinck@colisweb.com>"]
license = "MIT"
edition = "2024"

[features]
default = ["terminal"]
terminal = ["dep:crossterm", "dep:color-eyre", "ratatui/crossterm"]
web = ["dep:ratzilla", "dep:getrandom"]

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["underline-color", "all-widgets", "macros", "layout-cache"] }
rand = "0.10.0"

# Terminal-only
crossterm = { version = "0.29.0", optional = true }
color-eyre = { version = "0.6.3", optional = true }

# Web-only
ratzilla = { version = "0.3", optional = true }
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
